# sentinel-dispatch

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
core-java/: README.md  pom.xml
core-java/src/main/java/cl/ucen/sentinel/adapters/grafo/: CargadorGrafo.java  GrafoVialJGraphT.java
core-java/src/main/java/cl/ucen/sentinel/application/: CalculadorRuta.java  CandidataRedireccion.java  DespacharAmbulancia.java  EstadoSaturacion.java  MotivoDespacho.java  ResultadoDespacho.java  Saturacion.java
core-java/src/main/java/cl/ucen/sentinel/cli/: JsonlSerializer.java  Main.java  RunDatasetCommand.java
core-java/src/main/java/cl/ucen/sentinel/domain/dispatch/: CandidatoDespacho.java  CostoDespacho.java  EstadoUnidad.java  FuncionCosto.java  Incidente.java  ResultadoSeleccion.java  Seleccion.java  TViajeInvalidoException.java  TipoUnidad.java  Unidad.java  UnidadInelegibleException.java
core-java/src/main/java/cl/ucen/sentinel/domain/routing/: AEstrella.java  GrafoVial.java  Heuristica.java  NoRutaDisponibleException.java
core-java/src/main/java/cl/ucen/sentinel/domain/triaje/: Arbol.java  CategoriaMPDS.java  GrupoEtario.java  NivelDolorToracico.java  NivelSangrado.java  RespuestaTriaje.java
core-java/src/test/java/cl/ucen/sentinel/: SmokeTest.java
core-java/src/test/java/cl/ucen/sentinel/adapters/grafo/: CargadorGrafoTest.java  GrafoVialJGraphTTest.java
core-java/src/test/java/cl/ucen/sentinel/application/: DespacharAmbulanciaTest.java  MotivoDespachoTest.java  SaturacionTest.java
core-java/src/test/java/cl/ucen/sentinel/cli/: JsonlSerializerTest.java  RunDatasetCommandTest.java
core-java/src/test/java/cl/ucen/sentinel/domain/dispatch/: EstadoUnidadTest.java  FuncionCostoTest.java  SeleccionTest.java  TipoUnidadTest.java
core-java/src/test/java/cl/ucen/sentinel/domain/routing/: AEstrellaTest.java  HeuristicaTest.java
core-java/src/test/java/cl/ucen/sentinel/domain/triaje/: ArbolTest.java  CategoriaMPDSTest.java  RespuestaTriajeTest.java
core-java/src/test/resources/cl/ucen/sentinel/adapters/grafo/: mini_grafo.graphml  no_es_graphml.xml
core-java/src/test/resources/cl/ucen/sentinel/cli/: mini_grafo_cli.graphml
core-python/: .env.example  Dockerfile  Makefile  pyproject.toml
core-python/scripts/: build_graph.py  cloudflared-setup.md  healthcheck.sh
core-python/src/sentinel_dispatch/adapters/: __init__.py  grafo_osmnx.py
core-python/src/sentinel_dispatch/application/: __init__.py  despachar_ambulancia.py  saturacion.py  tipos.py
core-python/src/sentinel_dispatch/domain/dispatch/: __init__.py  funcion_costo.py  redespacho.py  seleccion.py  tipos.py
core-python/src/sentinel_dispatch/domain/incidente/: __init__.py  validacion.py
core-python/src/sentinel_dispatch/domain/routing/: __init__.py  a_estrella.py  grafo_vial.py  heuristica.py  tipos.py
core-python/src/sentinel_dispatch/domain/triaje/: __init__.py  arbol.py  tipos.py
core-python/src/sentinel_dispatch/interfaces/api/: __init__.py  main.py
core-python/src/sentinel_dispatch/interfaces/cli/: __init__.py  app.py  run_dataset_cmd.py  triaje_cmd.py
core-python/tests/fixtures/: osrm_oracle.json
core-python/tests/integration/: test_api_smoke.py  test_api_validacion_coordenadas.py  test_routing_vs_osrm.py
core-python/tests/unit/: test_smoke.py
core-python/tests/unit/adapters/: conftest.py  test_grafo_osmnx_snap.py
core-python/tests/unit/application/: __init__.py  test_despacho.py  test_saturacion.py
core-python/tests/unit/domain/dispatch/: __init__.py  test_funcion_costo.py  test_redespacho.py  test_seleccion.py
core-python/tests/unit/domain/incidente/: test_validacion_coordenadas.py
core-python/tests/unit/domain/routing/: conftest.py  grafo_fake.py  test_a_estrella.py  test_heuristica.py
core-python/tests/unit/domain/triaje/: conftest.py  test_arbol.py  test_dataset.py  test_tipos.py
core-python/tests/unit/interfaces/cli/: test_run_dataset_cmd.py  test_triaje_cmd.py
core-python/tests/unit/tools/: test_compare_outputs.py
data/dataset/: README.md  incidentes.json  unidades.json
docs/: SRS.md  coding-standards.md  data-model.md  devops.md  security.md
docs/api/: examples.md  openapi.yaml
docs/architecture/: c4-components.md  c4-container.md  c4-context.md  c4-deployment.md  c4.md  overview.md  process-bpmn.bpmn  process-bpmn.md
docs/architecture/decisions/: 0000-template.md  0001-stack.md  0002-monolito-modular.md  0003-sqlite-v1.md  0004-frontend-retro-htmx.md  0005-deploy-demo.md  0006-ports-and-adapters.md  0007-persistencia-jsonl.md  0008-validacion-dual-java-python.md  0009-refinamiento-arbol-triaje.md  0010-routing-astar-y-validacion-osrm.md  0011-reformulacion-criterio-it01.md  0012-ubicacion-validador-coordenadas.md  0013-cp01c-criterio-calibrado.md  0014-funcion-costo-dispatch.md  0015-fallback-rn02-suboptimo.md  0016-camino-95-cp01a.md  0017-contrato-jsonl-validacion-dual.md
docs/database/: backup-policy.md  migrations.md
docs/devops/: branching-strategy.md  ci-cd.md
docs/operations/: observability.md  runbook.md
docs/product/: glossary.md  mockups.md  vision.md
docs/quality/: bootstrap-cp01a.md  definition-of-done.md  outliers-cp01a.csv  outliers-cp01a.md  outliers-sensibilidad.md  sqa-plan.md  testing-strategy.md  trazabilidad.md
docs/quality/ftr/: 0000-template.md
docs/requirements/: acceptance-criteria.md  requirements.md  user-stories.md
src/sentinel_dispatch/: __init__.py
src/sentinel_dispatch/persistence/: __init__.py
src/sentinel_dispatch/routing/: __init__.py
src/sentinel_dispatch/triaje/: __init__.py
src/sentinel_dispatch/web/: __init__.py
tests/integration/: test_api_smoke.py
tools/: analyze_outliers.py  bootstrap_cp01a.py  build_osrm_oracle.sh  compare_outputs.py  generate_osrm_fixture.py
