[project]
name = "sentinel-dispatch"
version = "0.1.0"
description = "Motor de despacho eficiente para unidades de emergencia médica — IV Región de Coquimbo"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Benjamín López" },
    { name = "Fernando Godoy M." },
]
keywords = ["ems", "dispatch", "astar", "osmnx", "mpds", "healthcare"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    # API + web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    # Persistencia (ADR-0007: JSONL append-only — supersede ADR-0003)
    "jsonlines>=4.0",
    # Geo + ruteo
    "osmnx>=2.0",
    "networkx>=3.4",
    "shapely>=2.0",
    # CLI
    "typer>=0.15",
    # Validación
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    # Logs + observabilidad
    "structlog>=24.4",
    "prometheus-client>=0.21",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-shapely",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel_dispatch"]

# ===================================================================
# RUFF — lint + format unificado
# ===================================================================
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "I",       # isort
    "B",       # bugbear
    "C4",      # comprehensions
    "UP",      # pyupgrade
    "SIM",     # simplify
    "RUF",     # ruff-specific
    "S",       # bandit (security)
    "N",       # pep8-naming
    "PT",      # pytest style
    "TCH",     # type-checking
]
ignore = [
    "S101",  # asserts permitidos en tests
    "E501",  # line length manejado por formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]
"scripts/**" = ["S603", "S607"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ===================================================================
# MYPY — typecheck
# ===================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Estricto en dominio puro y aplicación (Ports & Adapters — ADR-0006)
module = [
    "sentinel_dispatch.domain.*",
    "sentinel_dispatch.application.*",
    "sentinel_dispatch.ports.*",
]
strict = true

[[tool.mypy.overrides]]
# Relajado en bordes con frameworks (adapters concretos e interfaces HTTP/CLI)
module = [
    "sentinel_dispatch.adapters.*",
    "sentinel_dispatch.interfaces.*",
]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
# Libs sin stubs decentes
module = ["osmnx.*", "networkx.*", "structlog.*", "jsonlines.*"]
ignore_missing_imports = true

# ===================================================================
# PYTEST
# ===================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/sentinel_dispatch",
    "--cov-report=term-missing",
    # F0: threshold en 0 durante scaffolding. Subir a 70 cuando los módulos de
    # dominio (triaje/routing/dispatch) tengan código real en F3.
    "--cov-fail-under=0",
]
asyncio_mode = "auto"
markers = [
    "unit: tests unitarios puros (rápidos)",
    "integration: tests de integración con BD/HTTP",
    "dataset: validación contra dataset de aceptación del SRS (12 incidentes)",
    "slow: tests >1s; opt-in via -m slow",
]

[tool.coverage.run]
branch = true
source = ["src/sentinel_dispatch"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
